--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -13,3 +13,7 @@ materials.edit=Edit Materials List
 mclass.login=Login
 mclass.confirm.unregister=Your have unregister sucesfully
 mclass.unregister=Unregister
+masterClass.material=Learning material
+masterClass.promoters=Promoters
+masterClass.registers=Registers
+masterClass.cook=Cook 
