--- a/ACME/src/main/webapp/views/credit-card/messages.properties
+++ b/ACME/src/main/webapp/views/credit-card/messages.properties
@@ -4,3 +4,6 @@ credit-card.number=Number
 credit-card.expirationYear=Expiration Year
 credit-card.expirationMonth=Expiration Month
 credit-card.CVV=CVV
+credit-card.save=Save
+credit-card.delete=Delete
+credit-card.cancel=Cancel
