--- a/ACME/src/main/webapp/views/credit-card/messages_es.properties
+++ b/ACME/src/main/webapp/views/credit-card/messages_es.properties
@@ -4,3 +4,6 @@ credit-card.number=Número
 credit-card.expirationYear=Año de caducidad
 credit-card.expirationMonth=Mes de caducidad
 credit-card.CVV=CVV
+credit-card.save=Guardar
+credit-card.delete=Borrar
+credit-card.cancel=Cancelar
