Sponsor termiando excepto por un detalle

--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -30,6 +30,7 @@ master.page.curricula.edit.do=Editar curriculum
 master.page.campaing.list.do=Mis camapañas
 master.page.campaing.create=Crear camapaña
 master.page.campaign=Campañas
+master.page.monthlybill.list=Lista de facturas mensuales
 master.page.monthlybill.browse.do=Buscar factura mensual
 master.page.banner.editCost.do=Editar coste del anuncio
 master.page.maclass.list.do=Lista de clases maestras
