--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -30,6 +30,7 @@ master.page.curricula.edit.do=Edit curricula
 master.page.campaing.list.do=My camapaigns
 master.page.campaing.create=Create Campaign
 master.page.campaign=Campaigns
+master.page.monthlybill.list=Monthly Bills List
 master.page.monthlybill.browse.do=Browse monthly-bill
 master.page.banner.editCost.do=Edit banner cost
 master.page.maclass.list.do=Master Class list
