dinámica de mensajes comenzada 2

--- a/ACME/src/main/webapp/views/message/messages_es.properties
+++ b/ACME/src/main/webapp/views/message/messages_es.properties
@@ -1,4 +1,7 @@
-message.subject=Asunto
-message.sentDate=Fecha de envio
-message.recipient=Destinatario
-message.priority=Prioridad
+m.subject=Asunto
+m.sentDate=Fecha de envio
+m.recipient=Destinatario
+m.priority=Prioridad
+m.body=Contenido
+m.send=Enviar
+m.cancel=Cancelar
