--- a/ACME/src/main/webapp/views/message/messages.properties
+++ b/ACME/src/main/webapp/views/message/messages.properties
@@ -1,4 +1,7 @@
-message.subject=Subject
-message.sentDate=Sent Date
-message.recipient=Recipient
-message.priority=Priority
+m.subject=Subject
+m.sentDate=Sent Date
+m.recipient=Recipient
+m.priority=Priority
+m.body=Body
+m.send=Send
+m.cancel=Cancel
