arreglado view profiles

--- a/ACME/src/main/webapp/views/user/messages.properties
+++ b/ACME/src/main/webapp/views/user/messages.properties
@@ -7,3 +7,10 @@ actor.password=Password
 actor.confirm.password=Confirm password
 recipe.list=List of recipes
 user.search=Search
+user.profile = Profile
+user.view.title = User profile
+user.view.name = Name 
+user.view.surname = Surname
+user.view.emailAddress = Mail
+user.view.phone = Phone
+user.view.postalAddress = Postal Address
