arreglado view profiles

--- a/ACME/src/main/webapp/views/user/messages.properties
+++ b/ACME/src/main/webapp/views/user/messages.properties
@@ -14,3 +14,4 @@ user.view.surname = Surname
 user.view.emailAddress = Mail
 user.view.phone = Phone
 user.view.postalAddress = Postal Address
+actor.back = Get back
