--- a/ACME/src/main/webapp/views/user/messages_es.properties
+++ b/ACME/src/main/webapp/views/user/messages_es.properties
@@ -14,3 +14,4 @@ user.view.surname = Apellidos
 user.view.emailAddress = Correo electrónico
 user.view.phone = Teléfono
 user.view.postalAddress = Dirección postal
+actor.back = Volver atrás
