--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -45,4 +45,5 @@ master.page.recipes.list.do=List of recipes
 master.page.sponsor.editCC=Edit Credit Card
 master.page.recipes.my.list.do=My recipes
 master.page.ingredient=Ingredients
+master.page.admin.createKey.do = Create keywords
 
