--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -45,3 +45,4 @@ master.page.recipes.list.do=Listado de recetas
 master.page.sponsor.editCC=Editar tarjeta de crédito
 master.page.recipes.my.list.do=Mis recetas
 master.page.ingredient=Ingredientes
+master.page.admin.createKey.do = Crear Keyword
