--- a/ACME/src/main/webapp/views/contest/messages.properties
+++ b/ACME/src/main/webapp/views/contest/messages.properties
@@ -1,4 +1,4 @@
-ingredient.name=Name
-ingredient.description=Description
-ingredient.picture=Picture
-ingredient.property=Properties
+contest.title = Title
+contest.oppenig = Opening date
+contest.closing = Closing date
+contest.winners = Winners
