--- a/ACME/src/main/webapp/views/contest/messages_es.properties
+++ b/ACME/src/main/webapp/views/contest/messages_es.properties
@@ -1,4 +1,4 @@
-ingredient.name=Nombre
-ingredient.description=Descripcion
-ingredient.picture=Foto
-ingredient.property=Propiedades
+contest.title = Título
+contest.oppenig = Fecha apertura
+contest.closing = Fecha cierre
+contest.winners = Ganadores
