--- a/ACME/src/main/webapp/views/recipe/messages.properties
+++ b/ACME/src/main/webapp/views/recipe/messages.properties
@@ -18,3 +18,4 @@ recipe.view.updateDate = Update date
 recipe.view.categorie = Categorie
 recipe.view.user = User
 recipe.view = View 
+recipe.rate = Rate
