--- a/ACME/src/main/webapp/views/recipe/messages_es.properties
+++ b/ACME/src/main/webapp/views/recipe/messages_es.properties
@@ -17,3 +17,4 @@ recipe.view.updateDate = Fecha de actualización
 recipe.view.categorie = Categoria
 recipe.view.user = Usuario
 recipe.view = Ver
+recipe.rate = Calificar 
