view de recipe tiene rate

--- a/ACME/src/main/webapp/views/recipe/messages_es.properties
+++ b/ACME/src/main/webapp/views/recipe/messages_es.properties
@@ -18,3 +18,4 @@ recipe.view.categorie = Categoria
 recipe.view.user = Usuario
 recipe.view = Ver
 recipe.rate = Calificar 
+recipe.view.rate = Likes
