create comment a falta de la parte de receta

--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -46,3 +46,4 @@ master.page.sponsor.editCC=Editar tarjeta de crédito
 master.page.recipes.my.list.do=Mis recetas
 master.page.ingredient=Ingredientes
 master.page.admin.createKey.do = Crear Keyword
+master.page.write.comment.do = Escribir un comentario
