--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -46,4 +46,5 @@ master.page.sponsor.editCC=Edit Credit Card
 master.page.recipes.my.list.do=My recipes
 master.page.ingredient=Ingredients
 master.page.admin.createKey.do = Create keywords
+master.page.write.comment.do = Write a comment
 
