--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -47,4 +47,5 @@ master.page.recipes.my.list.do=My recipes
 master.page.ingredient=Ingredients
 master.page.admin.createKey.do = Create keywords
 master.page.write.comment.do = Write a comment
+master.page.stream.recipe.do = Last 5 recipes
 
