--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -47,3 +47,4 @@ master.page.recipes.my.list.do=Mis recetas
 master.page.ingredient=Ingredientes
 master.page.admin.createKey.do = Crear Keyword
 master.page.write.comment.do = Escribir un comentario
+master.page.stream.recipe.do = Últimas 5 recetas
