Curricula funcionando (falta poder dejar campos vacios)

--- a/ACME/src/main/webapp/views/curricula/messages.properties
+++ b/ACME/src/main/webapp/views/curricula/messages.properties
@@ -1,6 +1,8 @@
-curricula.education=Education Section
-curricula.experience=Experience Section
-curricula.hobbies=Hobbies Section
+curricula.educationSection=Education Section
+curricula.experienceSection=Experience Section
+curricula.hobbiesSection=Hobbies Section
+curricula.photo=Fotografía
+curricula.referencias=Referencias
 curricula.save=Save
 curricula.delete=Delete
 curricula.cancel=Cancel
