--- a/ACME/src/main/webapp/views/curricula/messages_es.properties
+++ b/ACME/src/main/webapp/views/curricula/messages_es.properties
@@ -1,8 +1,8 @@
-curricula.education=Sección de educación
-curricula.experience=Sección de experiencia
-curricula.hobbies=Sección de hobbies
+curricula.educationSection=Education Section
+curricula.experienceSection=Experience Section
+curricula.hobbiesSection=Hobbies Section
 curricula.photo=Fotografía
-curricula.references=Referencias
+curricula.referencias=Referencias
 curricula.save=Guardar
 curricula.delete=Borrar
 curricula.cancel=Cancelar
