--- a/ACME/src/main/webapp/views/ingredient/messages.properties
+++ b/ACME/src/main/webapp/views/ingredient/messages.properties
@@ -4,6 +4,7 @@ i.picture=Picture
 i.property=Property
 i.send=Send
 i.cancel=Cancel
+i.newIngredient=New
 recipe.edit=Edit
 recipe.delete=Delete
 recipe.add=Add
