--- a/ACME/src/main/webapp/views/ingredient/messages_es.properties
+++ b/ACME/src/main/webapp/views/ingredient/messages_es.properties
@@ -4,6 +4,7 @@ i.picture=Foto
 i.property=Propiedades
 i.send=Enviar
 i.cancel=Cancelar
+i.newIngredient=Nuevo
 recipe.edit=Editar
 recipe.delete=Borrar
 recipe.add=Anhadir
