comentarios casi hechos

--- a/ACME/src/main/webapp/views/recipe/messages.properties
+++ b/ACME/src/main/webapp/views/recipe/messages.properties
@@ -19,4 +19,9 @@ recipe.view.categorie = Categorie
 recipe.view.user = User
 recipe.view = View 
 recipe.rate = Rate
-recipe.view.rate = Likes
+recipe.view.rate.likes=Likes
+recipe.view.rate.dislikes=Dislikes
+comment.tittle=Tittle
+comment.text=Text
+comment.number=Number of stars
+recipe.view.write.comment= New comment
