--- a/ACME/src/main/webapp/views/recipe/messages_es.properties
+++ b/ACME/src/main/webapp/views/recipe/messages_es.properties
@@ -19,3 +19,7 @@ recipe.view.user = Usuario
 recipe.view = Ver
 recipe.rate = Calificar 
 recipe.view.rate = Likes
+comment.tittle=Título
+comment.text=Texto
+comment.number=Número de estrellas
+recipe.view.write.comment= Nuevo comentario
