managing taxonomy of categories

--- a/ACME/src/main/webapp/views/categorie/messages_es.properties
+++ b/ACME/src/main/webapp/views/categorie/messages_es.properties
@@ -5,3 +5,4 @@ categorie.save = Guardar
 categorie.cancel = Cancelar
 categorie.edit = Editar
 categorie.new.categorie = Crear nueva
+ingredient.name = Nombre del ingrediente
