--- a/ACME/src/main/webapp/views/categorie/messages.properties
+++ b/ACME/src/main/webapp/views/categorie/messages.properties
@@ -5,3 +5,4 @@ categorie.save = Save
 categorie.cancel = Cancel
 categorie.edit = Edit
 categorie.new.categorie = New categorie
+ingredient.name = Ingredient name
