--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -48,5 +48,6 @@ master.page.ingredient=Ingredients
 master.page.admin.createKey.do = Create keywords
 master.page.write.comment.do = Write a comment
 master.page.stream.recipe.do = Last 5 recipes
+master.page.admin.categorieList.do = Categorie list
 master.page.computewinners=Compute Winners
 
