--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -48,5 +48,6 @@ master.page.ingredient=Ingredientes
 master.page.admin.createKey.do = Crear Keyword
 master.page.write.comment.do = Escribir un comentario
 master.page.stream.recipe.do = Últimas 5 recetas
+master.page.admin.categorieList.do = Lista de categorias
 master.page.computewinners=Establecer ganadores
 
