admin can manage contest too

--- a/ACME/src/main/webapp/views/categorie/messages.properties
+++ b/ACME/src/main/webapp/views/categorie/messages.properties
@@ -6,3 +6,4 @@ categorie.cancel = Cancel
 categorie.edit = Edit
 categorie.new.categorie = New categorie
 ingredient.name = Ingredient name
+categorie.delete = Delete
