--- a/ACME/src/main/webapp/views/categorie/messages_es.properties
+++ b/ACME/src/main/webapp/views/categorie/messages_es.properties
@@ -6,3 +6,4 @@ categorie.cancel = Cancelar
 categorie.edit = Editar
 categorie.new.categorie = Crear nueva
 ingredient.name = Nombre del ingrediente
+categorie.delete = Borrar
