--- a/ACME/src/main/webapp/views/contest/messages.properties
+++ b/ACME/src/main/webapp/views/contest/messages.properties
@@ -2,3 +2,7 @@ contest.title = Title
 contest.oppenig = Opening date
 contest.closing = Closing date
 contest.winners = Winners
+contest.edit = Edit
+contest.cancel = Cancel
+contest.save = Save
+contest.delete = Delete
