--- a/ACME/src/main/webapp/views/contest/messages_es.properties
+++ b/ACME/src/main/webapp/views/contest/messages_es.properties
@@ -2,3 +2,7 @@ contest.title = Título
 contest.oppenig = Fecha apertura
 contest.closing = Fecha cierre
 contest.winners = Ganadores
+contest.edit = Editar
+contest.cancel = Cancelar
+contest.save = Guardar
+contest.delete = Borrar
