--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -49,5 +49,6 @@ master.page.admin.createKey.do = Create keywords
 master.page.write.comment.do = Write a comment
 master.page.stream.recipe.do = Last 5 recipes
 master.page.admin.categorieList.do = Categorie list
+master.page.admin.contestList.do = Contest List
 master.page.computewinners=Compute Winners
 
