--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -49,5 +49,6 @@ master.page.admin.createKey.do = Crear Keyword
 master.page.write.comment.do = Escribir un comentario
 master.page.stream.recipe.do = Últimas 5 recetas
 master.page.admin.categorieList.do = Lista de categorias
+master.page.admin.contestList.do = Lista de concursos
 master.page.computewinners=Establecer ganadores
 
