admin can manage contest tooe

--- a/ACME/src/main/webapp/views/contest/messages_es.properties
+++ b/ACME/src/main/webapp/views/contest/messages_es.properties
@@ -6,3 +6,4 @@ contest.edit = Editar
 contest.cancel = Cancelar
 contest.save = Guardar
 contest.delete = Borrar
+contest.new.contest = Nuevo concurso
