--- a/ACME/src/main/webapp/views/recipe/messages.properties
+++ b/ACME/src/main/webapp/views/recipe/messages.properties
@@ -19,9 +19,11 @@ recipe.view.categorie = Categorie
 recipe.view.user = User
 recipe.view = View 
 recipe.rate = Rate
-recipe.view.rate.likes=Likes
-recipe.view.rate.dislikes=Dislikes
+recipe.view.rate.likes=Likes number
+recipe.view.rate.dislikes=Dislikes number
 comment.tittle=Tittle
 comment.text=Text
 comment.number=Number of stars
 recipe.view.write.comment= New comment
+recipe.rate.like.button = Like
+recipe.rate.dislike.button = Dislike
