--- a/ACME/src/main/webapp/views/recipe/messages_es.properties
+++ b/ACME/src/main/webapp/views/recipe/messages_es.properties
@@ -19,7 +19,11 @@ recipe.view.user = Usuario
 recipe.view = Ver
 recipe.rate = Calificar 
 recipe.view.rate = Likes
+recipe.view.rate.likes=Nº de me gusta
+recipe.view.rate.dislikes=Nº de no me gusta
 comment.tittle=Título
 comment.text=Texto
 comment.number=Número de estrellas
 recipe.view.write.comment= Nuevo comentario
+recipe.rate.like.button = Me gusta
+recipe.rate.dislike.button = Ya no me gusta
