--- a/ACME/src/main/webapp/views/monthly-bill/messages.properties
+++ b/ACME/src/main/webapp/views/monthly-bill/messages.properties
@@ -4,9 +4,10 @@ monthlybill.cost=Cost
 monthlybill.description=Description
 monthlybill.sponsor=Sponsor
 monthlybill.browse=Browse
-mb.createheader
-mb.payDate
-mb.cost
-mb.description
-mb.sponsor
-mb.paid
+mb.createheader = Creation date
+mb.payDate = Pay date
+mb.cost = Cost
+mb.description = Description
+mb.sponsor = Sponsor
+mb.paid = It's been paid?
+mb.pay = PAY
