--- a/ACME/src/main/webapp/views/monthly-bill/messages_es.properties
+++ b/ACME/src/main/webapp/views/monthly-bill/messages_es.properties
@@ -4,3 +4,10 @@ monthlybill.cost=Coste
 monthlybill.description=Descripción
 monthlybill.sponsor=Sponsor
 monthlybill.browse=Navegar
+mb.createheader = Fecha creación
+mb.payDate = Fecha de pago
+mb.cost = Coste
+mb.description = Descripción
+mb.sponsor = Sponsor
+mb.paid = ¿Pagada?
+mb.pay = PAGAR
