--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -48,3 +48,5 @@ master.page.ingredient=Ingredientes
 master.page.admin.createKey.do = Crear Keyword
 master.page.write.comment.do = Escribir un comentario
 master.page.stream.recipe.do = Últimas 5 recetas
+master.page.computewinners=Establecer ganadores
+
