--- a/ACME/src/main/webapp/views/campaign/messages.properties
+++ b/ACME/src/main/webapp/views/campaign/messages.properties
@@ -8,3 +8,4 @@ campaign.save=Save
 campaign.delete=Delete
 campaign.cancel=Cancel
 campaign.edit=Edit campaign
+campaign.editBannerCost = Edit banner cost
