--- a/ACME/src/main/webapp/views/campaign/messages_es.properties
+++ b/ACME/src/main/webapp/views/campaign/messages_es.properties
@@ -8,3 +8,4 @@ campaign.save=Guardar
 campaign.delete=Borrar
 campaign.cancel=Cancelar
 campaign.edit=Editar campaña
+campaign.editBannerCost = Cambiar coste banner
