--- a/ACME/src/main/webapp/views/ingredient/messages.properties
+++ b/ACME/src/main/webapp/views/ingredient/messages.properties
@@ -1,10 +1,10 @@
-i.name=Name
-i.description=Description
-i.picture=Picture
-i.property=Property
-i.send=Send
-i.cancel=Cancel
-i.newIngredient=New
-recipe.edit=Edit
-recipe.delete=Delete
-recipe.add=Add
+ingredient.name=Name
+ingredient.description=Description
+ingredient.picture=Picture
+ingredient.property=Property
+ingredient.send=Send
+ingredient.cancel=Cancel
+ingredient.newIngredient=New
+ingredient.edit=Edit
+ingredient.delete=Delete
+ingredient.add=Add
