--- a/ACME/src/main/webapp/views/ingredient/messages_es.properties
+++ b/ACME/src/main/webapp/views/ingredient/messages_es.properties
@@ -1,10 +1,10 @@
-i.name=Nombre
-i.description=Descripcion
-i.picture=Foto
-i.property=Propiedades
-i.send=Enviar
-i.cancel=Cancelar
-i.newIngredient=Nuevo
-recipe.edit=Editar
-recipe.delete=Borrar
-recipe.add=Anhadir
+ingredient.name=Nombre
+ingredient.description=Descripcion
+ingredient.picture=Foto
+ingredient.property=Propiedades
+ingredient.send=Enviar
+ingredient.cancel=Cancelar
+ingredient.newIngredient=Nuevo
+ingredient.edit=Editar
+ingredient.delete=Borrar
+ingredient.add=Anhadir
