--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -51,5 +51,6 @@ master.page.stream.recipe.do = Últimas 5 recetas
 master.page.admin.categorieList.do = Lista de categorias
 master.page.admin.contestList.do = Lista de concursos
 master.page.computewinners=Establecer ganadores
+master.page.property=Propiedades
 master.page.dashboard.do = Dashboard
 
