--- a/ACME/src/main/webapp/views/property/messages_es.properties
+++ b/ACME/src/main/webapp/views/property/messages_es.properties
@@ -2,3 +2,6 @@ p.name=Nombre
 p.quantity=Cantidad
 p.send=Enviar
 p.cancel=Cancelar
+property.edit=Editar
+property.delete=Borrar
+property.newProperty=Nuevo
