dashboard on fire

--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -1,1 +1,4 @@
 admin.key = Keywords
+dashboard.q1 = Minimum number of recipes per user
+dashboard.q2 = Average number of recipes per user
+dashboard.q3 = Maximum number of recipes per user
