--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -1,1 +1,4 @@
 admin.key = Keywords
+dashboard.q1 = Mínimo número de recetas por usuario
+dashboard.q2 = Media de recetas por usuario
+dashboard.q3 = Maximo número de recetas por usuario
