dashboard on fire DONE

--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -2,3 +2,21 @@ admin.key = Keywords
 dashboard.q1 = Minimum number of recipes per user
 dashboard.q2 = Average number of recipes per user
 dashboard.q3 = Maximum number of recipes per user
+dashboard.q4 = User who authored more recipes
+dashboard.q5 = Minimum number of recipes qualified for a contest
+dashboard.q6 = Average number of recipes qualified for a contest
+dashboard.q7 = Maximum number of recipes qualified for a contest
+dashboard.q8 = Contest for which more recipes has qualified
+q8.title = Title
+q8.oppenig = Oppening date
+q8.closing = Closing date
+dashboard.q9 = Average of steps per recipe
+dashboard.q10 = Standart deviation of steps per recipe
+dashboard.q11 = Average of ingredients per recipe
+dashboard.q12 = Standart deviation of number of ingredients per recipe
+dashboard.q13 = Users in descending order of popularity
+q13.name = Name
+q13.surname = Surname
+q13.EmailAddress = Email
+q13.phone = Phone
+dashboard.q14 = Users in descendinf order by average of likes per recipe
