--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -2,3 +2,21 @@ admin.key = Keywords
 dashboard.q1 = Mínimo número de recetas por usuario
 dashboard.q2 = Media de recetas por usuario
 dashboard.q3 = Maximo número de recetas por usuario
+dashboard.q4 = Usuario que ha creado más recetas
+dashboard.q5 = Número mínimo de recetas calificadas para un concurso
+dashboard.q6 = Número medio de recetas calificadas para un concurso
+dashboard.q7 = Número máximo de recetas calificadas para un concurso
+dashboard.q8 = Concursos para los que más recetas han sido calificadas
+q8.title = Título
+q8.oppenig = Fecha de apertura
+q8.closing =Fecha de cierre
+dashboard.q9 = Media de pasos por receta
+dashboard.q10 = Desviación estandar del número de pasos por receta
+dashboard.q11 = Media de ingredientes por receta
+dashboard.q12 = Desviación estandar de ingredientes por receta 
+dashboard.q13 = Usuarios en orden descendiente de  popularidad
+q13.name = Nombre
+q13.surname = Apellidos
+q13.EmailAddress = Correo electrónico
+q13.phone = Teléfono
+dashboard.q14 = Usuarios en orden descendiente de número de likes por receta
