--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -53,4 +53,5 @@ master.page.admin.contestList.do = Lista de concursos
 master.page.computewinners=Establecer ganadores
 master.page.property=Propiedades
 master.page.dashboard.do = Dashboard
+master.page.createascook = Registrar cocinero
 
