--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -53,4 +53,5 @@ master.page.admin.contestList.do = Contest List
 master.page.computewinners=Compute Winners
 master.page.dashboard.do = Dashboard
 master.page.property=Properties
+master.page.createascook = Register a cook
 
