modificado el dashboard para los métodos del b:

--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -19,4 +19,13 @@ q13.name = Name
 q13.surname = Surname
 q13.EmailAddress = Email
 q13.phone = Phone
-dashboard.q14 = Users in descendinf order by average of likes per recipe
+dashboard.q14 = Users in descending order by average of likes per recipe
+dashboard.q15 = Minimum number of campaigns per sponsor
+dashboard.q16 = Average number of campaigns per sponsor
+dashboard.q17 = Maximum number of campaigns per sponsor
+dashboard.q18 = Minimum number of active campaigns per sponsor
+dashboard.q19 = Maximum number of active campaigns per sponsor
+dashboard.q20 = Average number of active campaigns per sponsor
+dashboard.q21 = Maximum number of campaigns per sponsor
+dashboard.q22 = Ranking of biggest cost of bills
+dashboard.q23 = Average and standard deviation of paid bills
