--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -20,3 +20,12 @@ q13.surname = Apellidos
 q13.EmailAddress = Correo electrónico
 q13.phone = Teléfono
 dashboard.q14 = Usuarios en orden descendiente de número de likes por receta
+dashboard.q15 = Mínimo número de campañas por patrocinador
+dashboard.q16 = Media de campañas por patrocinador
+dashboard.q17 = Máximo número de campañas por patrocinador
+dashboard.q18 = Mínimo número de campañas activas por patrocinador
+dashboard.q19 = Máximo número de campañas activas por patrocinador
+dashboard.q20 = Media de campañas activas por patrocinador
+dashboard.q21 = Número máximo de campañas por patrocinador
+dashboard.q22 = Ranking de coste de facturas
+dashboard.q23 = Media y desviación estandart de las facturas
