--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -28,4 +28,4 @@ dashboard.q19 = Maximum number of active campaigns per sponsor
 dashboard.q20 = Average number of active campaigns per sponsor
 dashboard.q21 = Maximum number of campaigns per sponsor
 dashboard.q22 = Ranking of biggest cost of bills
-dashboard.q23 = Average and standard deviation of paid bills
+dashboard.q23 = Companies that have spent the 90% of money
