--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -28,4 +28,4 @@ dashboard.q19 = Máximo número de campañas activas por patrocinador
 dashboard.q20 = Media de campañas activas por patrocinador
 dashboard.q21 = Número máximo de campañas por patrocinador
 dashboard.q22 = Ranking de coste de facturas
-dashboard.q23 = Media y desviación estandart de las facturas
+dashboard.q23 = Compañias que han gastado el 90% de su dinero
