--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -28,4 +28,14 @@ dashboard.q19 = Maximum number of active campaigns per sponsor
 dashboard.q20 = Average number of active campaigns per sponsor
 dashboard.q21 = Maximum number of campaigns per sponsor
 dashboard.q22 = Ranking of biggest cost of bills
-dashboard.q23 = Companies that have spent the 90% of money
+dashboard.q23 = Average and standard devoation of paid bills
+dashboard.q24 = Sponsors who have no managed a campaing in last tree months
+dashboard.q25 = Copanies that have spent less than the average
+dashboard.q26 =Companies that have spent the 90% of money
+
+
+dashboard.q27 = The minimum, the maximum, the average, and the standard deviation of the number of master classes per cook
+dashboard.q28 = The average number of learning materials per master class, grouped by kind of learning material.
+dashboard.q29 = The number of master classes that have been promoted.
+dashboard.q30 = The listing of cooks, sorted according to the number of master classes that have been promoted.
+dashboard.q31 = The average number of promoted and demoted master classes per cook.
