--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -27,5 +27,18 @@ dashboard.q18 = Mínimo número de campañas activas por patrocinador
 dashboard.q19 = Máximo número de campañas activas por patrocinador
 dashboard.q20 = Media de campañas activas por patrocinador
 dashboard.q21 = Número máximo de campañas por patrocinador
-dashboard.q22 = Ranking de coste de facturas
-dashboard.q23 = Compañias que han gastado el 90% de su dinero
+dashboard.q22 = Ranking de costes de facturas
+dashboard.q23 = Media y desviación estandard de las facturas pagadas
+dashboard.q24 = Patrocinadores que no han llevado una campaña en tres meses
+dashboard.q25 = Compañias que han gastado menos que la media
+dashboard.q26 = Compañias que han gastado el 90% de sus ingresos
+
+
+
+dashboard.q27 = El mínimo, máximo, media y desviación estandard del número de clases por cocinero
+dashboard.q28 = Número medio de materiales de aprendizaje por clase
+dashboard.q29 = Número de clases promovidas
+dashboard.q30 = Lista de cocineros de acuerdo a su número de clases
+dashboard.q31 = Media de clases por cocinero
+
+
