promote masterClass OK

--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -19,3 +19,4 @@ masterClass.registers=Registers
 masterClass.cook=Cook
 master.page.actor.folder.list=Message Folders
 master.page.actor.messages=Messages
+masterClass.promote =Promote
