--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -19,3 +19,4 @@ masterClass.registers=Registrados
 masterClass.cook=Cocinero
 master.page.actor.folder.list=Carpetas de mensajes
 master.page.actor.messages=Mensajes
+masterClass.promote = Promover
