attend to masterCLass ok

--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -20,3 +20,4 @@ masterClass.cook=Cook
 master.page.actor.folder.list=Message Folders
 master.page.actor.messages=Messages
 masterClass.promote =Promote
+masterClass.attend = Attend to
