--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -20,3 +20,4 @@ masterClass.cook=Cocinero
 master.page.actor.folder.list=Carpetas de mensajes
 master.page.actor.messages=Mensajes
 masterClass.promote = Promover
+masterClass.attend = Asistir
