compute casi casi

--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -51,4 +51,5 @@ master.page.stream.recipe.do = Last 5 recipes
 master.page.admin.categorieList.do = Categorie list
 master.page.admin.contestList.do = Contest List
 master.page.computewinners=Compute Winners
+master.page.admin.sponsors=Sponsors
 
