bulk funciona...pero no

--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -52,4 +52,5 @@ master.page.admin.categorieList.do = Categorie list
 master.page.admin.contestList.do = Contest List
 master.page.computewinners=Compute Winners
 master.page.admin.sponsors=Sponsors
+master.page.bulk=Send bulk message
 
