--- a/ACME/src/main/webapp/views/master-page/messages_es.properties
+++ b/ACME/src/main/webapp/views/master-page/messages_es.properties
@@ -52,4 +52,5 @@ master.page.admin.categorieList.do = Lista de categorias
 master.page.admin.contestList.do = Lista de concursos
 master.page.computewinners=Establecer ganadores
 master.page.admin.sponsors=Sponsors
+master.page.bulk= Enviar mensaje de recordatorio
 
