promote and demote flama

--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -21,3 +21,4 @@ master.page.actor.folder.list=Carpetas de mensajes
 master.page.actor.messages=Mensajes
 masterClass.promote = Promover
 masterClass.attend = Asistir
+masterClass.demote=Dejar de promover
