--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -21,3 +21,4 @@ master.page.actor.folder.list=Message Folders
 master.page.actor.messages=Messages
 masterClass.promote =Promote
 masterClass.attend = Attend to
+masterClass.demote=Demote
