--- a/ACME/src/main/webapp/views/welcome/messages.properties
+++ b/ACME/src/main/webapp/views/welcome/messages.properties
@@ -5,6 +5,6 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-welcome.greeting.prefix=Greetings
+welcome.greeting.prefix=Welcome to Acme-Pad-Thai
 welcome.greeting.suffix=!
 welcome.greeting.current.time=Current time is
