--- a/ACME/src/main/webapp/views/welcome/messages_es.properties
+++ b/ACME/src/main/webapp/views/welcome/messages_es.properties
@@ -5,6 +5,6 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-welcome.greeting.prefix=¡Saludos
+welcome.greeting.prefix=ï¿½Bienvenido a Acme-Pad-Thai
 welcome.greeting.suffix=!
-welcome.greeting.current.time=Día y hora actuales:
+welcome.greeting.current.time=Dï¿½a y hora actuales:
