nutri concreto terminado

--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -20,5 +20,6 @@ masterClass.cook=Cook
 master.page.actor.folder.list=Message Folders
 master.page.actor.messages=Messages
 masterClass.promote =Promote
-masterClass.attend = Attend to
+masterClass.attend = Register
 masterClass.demote=Demote
+masterClass.unattend=Unregister
