--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -22,3 +22,4 @@ master.page.actor.messages=Mensajes
 masterClass.promote = Promover
 masterClass.attend = Asistir
 masterClass.demote=Dejar de promover
+masterClass.unattend=Dejar de asistir
