--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -23,3 +23,5 @@ masterClass.promote =Promote
 masterClass.attend = Register
 masterClass.demote=Demote
 masterClass.unattend=Unregister
+mclass.registers = Registers
+mclass.view = View
