--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -23,3 +23,5 @@ masterClass.promote = Promover
 masterClass.attend = Asistir
 masterClass.demote=Dejar de promover
 masterClass.unattend=Dejar de asistir
+mclass.registers = Asistentes
+mclass.view = Ver
