--- a/ACME/src/main/webapp/views/admin/messages.properties
+++ b/ACME/src/main/webapp/views/admin/messages.properties
@@ -28,9 +28,9 @@ dashboard.q19 = Maximum number of active campaigns per sponsor
 dashboard.q20 = Average number of active campaigns per sponsor
 dashboard.q21 = Maximum number of campaigns per sponsor
 dashboard.q22 = Ranking of biggest cost of bills
-dashboard.q23 = Average and standard devoation of paid bills
-dashboard.q24 = Sponsors who have no managed a campaing in last tree months
-dashboard.q25 = Copanies that have spent less than the average
+dashboard.q23 = Average and standard deviation of paid bills
+dashboard.q24 = Sponsors who have no managed a campaign in last tree months
+dashboard.q25 = Companies that have spent less than the average
 dashboard.q26 =Companies that have spent the 90% of money
 
 
