--- a/ACME/src/main/webapp/views/admin/messages_es.properties
+++ b/ACME/src/main/webapp/views/admin/messages_es.properties
@@ -35,7 +35,7 @@ dashboard.q26 = Compañias que han gastado el 90% de sus ingresos
 
 
 
-dashboard.q27 = El mínimo, máximo, media y desviación estandard del número de clases por cocinero
+dashboard.q27 = El mínimo, máximo, media y desviación estándar del número de clases por cocinero
 dashboard.q28 = Número medio de materiales de aprendizaje por clase
 dashboard.q29 = Número de clases promovidas
 dashboard.q30 = Lista de cocineros de acuerdo a su número de clases
