--- a/ACME/src/main/webapp/views/banner/messages_es.properties
+++ b/ACME/src/main/webapp/views/banner/messages_es.properties
@@ -1,5 +1,5 @@
-banner.bannerCost=Coste del Banner (Anuncio)
+banner.bannerCost=Coste del anuncio
 banner.save=Guardar
 banner.delete=Borrar
-banner.confirm.delete=confirmar borrar
+banner.confirm.delete=Confirmar borrar
 banner.cancel=Cancelar
