--- a/ACME/src/main/webapp/views/categorie/messages.properties
+++ b/ACME/src/main/webapp/views/categorie/messages.properties
@@ -4,6 +4,6 @@ categorie.picture = Picture
 categorie.save = Save
 categorie.cancel = Cancel
 categorie.edit = Edit
-categorie.new.categorie = New categorie
+categorie.new.categorie = New category
 ingredient.name = Ingredient name
 categorie.delete = Delete
