--- a/ACME/src/main/webapp/views/categorie/messages_es.properties
+++ b/ACME/src/main/webapp/views/categorie/messages_es.properties
@@ -1,5 +1,5 @@
 categorie.name = Nombre
-categorie.description = Descripcion
+categorie.description = Descripción
 categorie.picture = Foto
 categorie.save = Guardar
 categorie.cancel = Cancelar
