--- a/ACME/src/main/webapp/views/curricula/messages.properties
+++ b/ACME/src/main/webapp/views/curricula/messages.properties
@@ -1,8 +1,8 @@
 curricula.educationSection=Education Section
 curricula.experienceSection=Experience Section
 curricula.hobbiesSection=Hobbies Section
-curricula.photo=Fotografía
-curricula.referencias=Referencias
+curricula.photo=Photo
+curricula.referencias=References
 curricula.save=Save
 curricula.delete=Delete
 curricula.cancel=Cancel
