--- a/ACME/src/main/webapp/views/curricula/messages_es.properties
+++ b/ACME/src/main/webapp/views/curricula/messages_es.properties
@@ -1,6 +1,6 @@
-curricula.educationSection=Education Section
-curricula.experienceSection=Experience Section
-curricula.hobbiesSection=Hobbies Section
+curricula.educationSection=Educación
+curricula.experienceSection=Experiencia
+curricula.hobbiesSection=Aficiones
 curricula.photo=Fotografía
 curricula.referencias=Referencias
 curricula.save=Guardar
