--- a/ACME/src/main/webapp/views/ingredient/messages_es.properties
+++ b/ACME/src/main/webapp/views/ingredient/messages_es.properties
@@ -1,5 +1,5 @@
 ingredient.name=Nombre
-ingredient.description=Descripcion
+ingredient.description=Descripción
 ingredient.picture=Foto
 ingredient.property=Propiedades
 ingredient.send=Enviar
@@ -7,4 +7,4 @@ ingredient.cancel=Cancelar
 ingredient.newIngredient=Nuevo
 ingredient.edit=Editar
 ingredient.delete=Borrar
-ingredient.add=Anhadir
+ingredient.add=Añadir
