--- a/ACME/src/main/webapp/views/master-page/messages.properties
+++ b/ACME/src/main/webapp/views/master-page/messages.properties
@@ -27,7 +27,7 @@ master.page.user=User
 master.page.cook=Cook
 master.page.sponsor=Sponsor
 master.page.curricula.edit.do=Edit curricula
-master.page.campaing.list.do=My camapaigns
+master.page.campaing.list.do=My campaigns
 master.page.campaing.create=Create Campaign
 master.page.campaign=Campaigns
 master.page.monthlybill.list=Monthly Bills List
@@ -48,7 +48,7 @@ master.page.ingredient=Ingredients
 master.page.admin.createKey.do = Create keywords
 master.page.write.comment.do = Write a comment
 master.page.stream.recipe.do = Last 5 recipes
-master.page.admin.categorieList.do = Categorie list
+master.page.admin.categorieList.do = Categories list
 master.page.admin.contestList.do = Contest List
 master.page.computewinners=Compute Winners
 master.page.admin.sponsors=Sponsors
