--- a/ACME/src/main/webapp/views/masterClass/messages.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages.properties
@@ -11,8 +11,8 @@ mclass.register=Register
 materials.list=Materials List
 materials.edit=Edit Materials List
 mclass.login=Login
-mclass.confirm.unregister=Your have unregister sucesfully
-mclass.unregister=Unregister
+mclass.confirm.unregister=Your have unregistered successfully
+mclass.unregister=Unregistered
 masterClass.material=Learning material
 masterClass.promoters=Promoters
 masterClass.registers=Registers
@@ -22,6 +22,6 @@ master.page.actor.messages=Messages
 masterClass.promote =Promote
 masterClass.attend = Register
 masterClass.demote=Demote
-masterClass.unattend=Unregister
+masterClass.unattend=Unattend
 mclass.registers = Registers
 mclass.view = View
