--- a/ACME/src/main/webapp/views/mensaje/messages_es.properties
+++ b/ACME/src/main/webapp/views/mensaje/messages_es.properties
@@ -1,5 +1,5 @@
 m.subject=Asunto
-m.sentDate=Fecha de envio
+m.sentDate=Fecha de envío
 m.recipient=Destinatario
 m.priority=Prioridad
 m.body=Contenido
