--- a/ACME/src/main/webapp/views/monthly-bill/messages_es.properties
+++ b/ACME/src/main/webapp/views/monthly-bill/messages_es.properties
@@ -2,7 +2,7 @@ monthlybill.createDate=Fecha de creación
 monthlybill.payDate=Fecha de pago
 monthlybill.cost=Coste
 monthlybill.description=Descripción
-monthlybill.sponsor=Sponsor
+monthlybill.sponsor=Patrocinador
 monthlybill.browse=Navegar
 mb.createheader = Fecha creación
 mb.payDate = Fecha de pago
