--- a/ACME/src/main/webapp/views/recipe/messages.properties
+++ b/ACME/src/main/webapp/views/recipe/messages.properties
@@ -8,14 +8,14 @@ recipe.qualify=Qualify
 recipe.users=Author
 recipe.ticker=Ticker
 recipe.pictures=Pictures
-recipe.categorie=Categorie
+recipe.categorie=Categories
 recipe.new=New recipe
 recipe.view.titulazo = Recipe view
 recipe.view.title = Title
 recipe.view.summary = Summary
 recipe.view.creationDate = Creation date
 recipe.view.updateDate = Update date
-recipe.view.categorie = Categorie
+recipe.view.categorie = Categories
 recipe.view.user = User
 recipe.view = View 
 recipe.rate = Rate
