--- a/ACME/src/main/webapp/views/masterClass/messages_es.properties
+++ b/ACME/src/main/webapp/views/masterClass/messages_es.properties
@@ -13,7 +13,7 @@ materials.edit=Editar lista de materiales
 mclass.login=Login
 mclass.confirm.unregister=Tu registro se ha eliminado satisfactoriamente
 mclass.unregister=Anular registro
-masterClass.material=Materiale
+masterClass.material=Materiales
 masterClass.promoters=Promotores
 masterClass.registers=Registrados
 masterClass.cook=Cocinero
