like y follow arreglado

--- a/ACME/src/main/webapp/views/recipe/messages.properties
+++ b/ACME/src/main/webapp/views/recipe/messages.properties
@@ -21,9 +21,10 @@ recipe.view = View
 recipe.rate = Rate
 recipe.view.rate.likes=Likes number
 recipe.view.rate.dislikes=Dislikes number
-comment.tittle=Tittle
+comment.title=Tittle
 comment.text=Text
 comment.number=Number of stars
+comment.save=Save
 recipe.view.write.comment= New comment
 recipe.rate.like.button = Like
-recipe.rate.dislike.button = Dislike
+recipe.rate.dislike.button =
