--- a/ACME/src/main/webapp/views/recipe/messages_es.properties
+++ b/ACME/src/main/webapp/views/recipe/messages_es.properties
@@ -21,9 +21,10 @@ recipe.rate = Calificar
 recipe.view.rate = Likes
 recipe.view.rate.likes=Nº de me gusta
 recipe.view.rate.dislikes=Nº de no me gusta
-comment.tittle=Título
+comment.title=Título
 comment.text=Texto
 comment.number=Número de estrellas
+comment.save=Guardar
 recipe.view.write.comment= Nuevo comentario
 recipe.rate.like.button = Me gusta
 recipe.rate.dislike.button = Ya no me gusta
